[gd_scene load_steps=3 format=3 uid="uid://c3p0rqkha82y4"]

[ext_resource type="Theme" path="res://scenes/ui/game.theme" id="1_8l8xy"]
[ext_resource type="Script" path="res://scenes/ui/dialog_confirm/dialog_confirm.gd" id="1_lmp8l"]

[node name="DialogConfirm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8l8xy")
script = ExtResource("1_lmp8l")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Titlebar" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"DialogPanelTitlebar"

[node name="LBL_Titlebar" type="Label" parent="Layout/Titlebar"]
unique_name_in_owner = true
layout_mode = 2
text = "Spiffy Titlebar Label"
horizontal_alignment = 1

[node name="Content" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"DialogPanelBody"

[node name="LBL_Content" type="Label" parent="Layout/Content"]
unique_name_in_owner = true
layout_mode = 2
text = "Message goes here, I suppose"
horizontal_alignment = 1

[node name="Options" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"DialogPanelFooter"

[node name="HBC" type="HBoxContainer" parent="Layout/Options"]
layout_mode = 2

[node name="BTN_Yes" type="Button" parent="Layout/Options/HBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[node name="Spacer" type="Control" parent="Layout/Options/HBC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BTN_No" type="Button" parent="Layout/Options/HBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No
"

[connection signal="pressed" from="Layout/Options/HBC/BTN_Yes" to="." method="_on_btn_yes_pressed"]
[connection signal="pressed" from="Layout/Options/HBC/BTN_No" to="." method="_on_btn_no_pressed"]
